hotfix #41 : 폴더만 조회 응답 수정